fix: Fix size of grid and spacing around elements
Removes the rounding and adds margins.

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,9 @@
     flex: row;
     gap: 10px;
     align-items: center;
+    height: 5vh;
+    margin-inline: 2.5vw;
+    font-family: sans-serif;
 }
 
 #generate {
@@ -18,6 +21,8 @@
 #container {
     display: flex;
     flex-flow: row wrap;
+    margin-inline: 2.5vw;
+    margin-bottom: 2.5vh;
 }
 
 .square {
